# ttk

./: .gitignore  CMakeUserPresets.json  Dockerfile  README.md  run-benchmark.sh  ttk.def
.devcontainer/: devcontainer.json
core/base/: CMakeLists.txt
core/base/exTreeM/: ExTreeM.h
core/base/pathCompression/: PathCompression.h
core/base/scalarFieldCriticalPoints2/: CMakeLists.txt  ScalarFieldCriticalPoints2.h  lut.cpp
core/vtk/ttkExTreeM/: ttk.module  ttkExTreeM.cpp  ttkExTreeM.h  vtk.module
core/vtk/ttkPathCompression/: ttkPathCompression.cpp  ttkPathCompression.h
core/vtk/ttkScalarFieldCriticalPoints2/: ttk.module  ttkScalarFieldCriticalPoints2.cpp  ttkScalarFieldCriticalPoints2.h  vtk.module
data/: bones.py
paraview/xmls/: ExTreeM.xml  PathCompression.xml  ScalarFieldCriticalPoints2.xml
